Enable NQP highlighting the easy way...
... by pretending that it's Raku and using the Raku
language parser / highlighter / etc.

Not perfect, but a huge improvement.